--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 :root {
-  --cyan: #0090a5;
-  --bg-section: rgba(250,250,250,.3);
+  --main-color: #004163;
+  --black:#333;
+  --light-color:#555;
+  --bg:   #d5d7e1;
+  --border:.1rem solid rgba(0,0,0,.1);
+  --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
 }
 
 * {
@@ -14,66 +19,417 @@
   border: none;
   text-decoration: none;
   text-transform: capitalize;
-  -webkit-transition: all .2s linear;
-  transition: all .2s linear;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
 }
 
 html {
   scroll-behavior: smooth !important;
   font-size: 62.5%;
   overflow-x: hidden;
-}
-
-html::-webkit-scrollbar {
-  width: .7rem;
-}
-
-html::-webkit-scrollbar-track {
-  background: #fff;
-}
-
-html::-webkit-scrollbar-thumb {
-  background: var(--cyan);
-}
-
-body {
-  background: #b3b3b3;
-  padding-right: 5rem;
+  scroll-padding-top: 9rem;
 }
 
 section {
-  padding: 4rem 9%;
-  min-height: 100vh;
-  width: 95vw;
-  margin-left: 7rem;
+  padding: 2rem 9%;
 }
 
 .heading {
   text-align: center;
-  padding-bottom: 2rem;
-  font-size: 6rem;
-  text-transform: uppercase;
-  color: #222;
+  padding-bottom: 3rem;
+  font-size: 4rem;
+  color: var(--black);
 }
 
 .heading span {
-  text-transform: uppercase;
-  color: var(--cyan);
+  color: var(--main-color);
+  border-radius: .5rem;
+  background: var(--bg);
+  padding: 0 1.5rem;
 }
 
 .btn {
   display: inline-block;
   margin-top: 1rem;
   padding: .8rem 3rem;
-  background: #222;
+  background: var(--main-color);
   color: #fff;
   font-size: 1.7rem;
   cursor: pointer;
-  border-radius: .2rem;
+  border-radius: .5rem;
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
 }
 
-.btn:hover {
-  background: var(--cyan);
-  letter-spacing: .2rem;
+.btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 0%;
+  background: var(--black);
+  z-index: -1;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
+}
+
+.btn:hover::before {
+  left: 0;
+  width: 100%;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background: #fff;
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 2rem 9%;
+}
+
+header .logo {
+  font-size: 2.5rem;
+  color: var(--black);
+  font-weight: bolder;
+}
+
+header .logo span {
+  color: var(--main-color);
+}
+
+header .menu a {
+  font-size: 1.7rem;
+  color: var(--light-color);
+  margin-left: 2rem;
+}
+
+header .menu a:hover {
+  color: var(--main-color);
+}
+
+header .btn-menu {
+  cursor: pointer;
+  font-size: 2.5rem;
+  padding: 1rem 1.3rem;
+  border-radius: .5rem;
+  color: var(--main-color);
+  background: var(--bg);
+  display: none;
+}
+
+/* Sección inicio */
+.inicio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1.5rem;
+  padding-top: 10rem;
+  background: var(--bg);
+  position: relative;
+}
+
+.inicio .content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 45rem;
+          flex: 1 1 45rem;
+}
+
+.inicio .content h3 {
+  font-size: 3.5rem;
+  color: var(--black);
+}
+
+.inicio .content p {
+  font-size: 1.7rem;
+  color: var(--light-color);
+  line-height: 1.8;
+  padding: 1rem 0;
+}
+
+.inicio .image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 45rem;
+          flex: 1 1 45rem;
+}
+
+.inicio .image img {
+  width: 100%;
+}
+
+/* Sección sevicios */
+.servicios .box-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.servicios .box-container .box {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30rem;
+          flex: 1 1 30rem;
+  border-radius: .5rem;
+  background: #fff;
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
+  padding: 2rem;
+  text-align: center;
+}
+
+.servicios .box-container .box img {
+  height: 30rem;
+  width: 30rem;
+}
+
+.servicios .box-container .box h3 {
+  font-size: 3rem;
+}
+
+.servicios .box-container .box p {
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+/* Seccion Sobre mi */
+.sobremi .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.sobremi .row .image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 45rem;
+          flex: 1 1 45rem;
+  padding: 2rem;
+}
+
+.sobremi .row .image img {
+  width: 100%;
+}
+
+.sobremi .row .content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 45rem;
+          flex: 1 1 45rem;
+}
+
+.sobremi .row .content .title {
+  font-size: 3rem;
+  color: var(--black);
+}
+
+.sobremi .row .content p {
+  font-size: 1.5rem;
+  color: var(--light-color);
+  line-height: 1.8;
+  padding: 1rem 0;
+}
+
+/* Sección galeria */
+.galeria .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(27rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap: 1.5rem;
+}
+
+.galeria .box-container .box {
+  height: 30rem;
+  border-radius: .5rem;
+  overflow: hidden;
+  position: relative;
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
+}
+
+.galeria .box-container .box img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* Sección reseñas */
+.reseñas .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(30rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.reseñas .box-container .box {
+  padding: 2rem;
+  border-radius: .5rem;
+  border: var(--border);
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
+}
+
+.reseñas .box-container .box p {
+  padding-top: 1rem;
+  font-size: 1.6rem;
+  line-height: 1.8;
+  color: var(--light-color);
+  font-style: italic;
+}
+
+.reseñas .box-container .box .user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 1rem;
+}
+
+.reseñas .box-container .box .user img {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.reseñas .box-container .box .user h3 {
+  font-size: 2.2rem;
+  color: var(--black);
+  padding-bottom: .5rem;
+}
+
+.reseñas .box-container .box .user ion-icon {
+  font-size: 1.5rem;
+  color: var(--main-color);
+}
+
+/* Sección contacto */
+.contacto .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(30rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.contacto .box-container .contacts {
+  padding: 2.5rem;
+  text-align: center;
+  border: var(--border);
+  border-radius: .5rem;
+  -webkit-box-shadow: var(--box-shadow);
+          box-shadow: var(--box-shadow);
+}
+
+.contacto .box-container .contacts ion-icon {
+  height: 7rem;
+  width: 7rem;
+  line-height: 6rem;
+  padding: .5rem;
+  font-size: 2rem;
+  color: var(--main-color);
+  background: var(--bg);
+  border-radius: 50%;
+}
+
+.contacto .box-container .contacts h3 {
+  color: var(--black);
+  padding: 1rem 0;
+  font-size: 2.5rem;
+}
+
+.contacto .box-container .contacts p {
+  color: var(--light-color);
+  line-height: 1.8;
+  font-size: 1.5rem;
+}
+
+/* Media queries */
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+  header {
+    padding: 2rem;
+  }
+  section {
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .btn-menu {
+    display: initial;
+  }
+  header .menu {
+    position: absolute;
+    top: 115%;
+    right: 2rem;
+    background: #fff;
+    -webkit-box-shadow: var(--box-shadow);
+            box-shadow: var(--box-shadow);
+    border: var(--border);
+    border-radius: .5rem;
+    width: 30rem;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transform-origin: top right;
+            transform-origin: top right;
+    opacity: 0;
+  }
+  header .menu a {
+    font-size: 2rem;
+    display: block;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: .5rem;
+  }
+  header .menu a:hover {
+    background: var(--bg);
+  }
+  header .active {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  .inicio .content {
+    text-align: center;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
