--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 :root{
-    --cyan: #0090a5;
-    --bg-section: rgba(250,250,250,.3);
+    --main-color: #004163;
+    --black:#333;
+    --light-color:#555;
+    --bg:   #d5d7e1;
+    --border:.1rem solid rgba(0,0,0,.1);
+    --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
 }
 * {
     font-family: 'Nunito', sans-serif;
@@ -13,46 +17,28 @@
     border: none;
     text-decoration: none;
     text-transform: capitalize;
-    transition: all .2s linear;
+    transition: all .3s ease-out;
 }
 html {
     scroll-behavior: smooth !important;
     font-size: 62.5%;
     overflow-x: hidden;
+    scroll-padding-top: 9rem;
 }
-html::-webkit-scrollbar{
-    width:.7rem;
-}
-  
-html::-webkit-scrollbar-track{
-    background:#fff;
-}
-  
-html::-webkit-scrollbar-thumb{
-    background:var(--cyan);
-}
-  
-body{
-    background:#b3b3b3;
-    padding-right: 5rem;
-}
-  
 section{
-    padding:4rem 9%;
-    min-height: 100vh;
-    width: 95vw;
-    margin-left: 7rem;
+    padding: 2rem 9%;
 }
   
 .heading{
     text-align: center;
-    padding-bottom: 2rem;
-    font-size: 6rem;
-    text-transform: uppercase;
-    color:#222;
+    padding-bottom: 3rem;
+    font-size: 4rem;
+    color: var(--black);
     span{
-        text-transform: uppercase;
-        color:var(--cyan);
+        color:var(--main-color);
+        border-radius: .5rem;
+        background: var(--bg);
+        padding: 0 1.5rem;
     }
 }
   
@@ -60,13 +46,305 @@ section{
     display: inline-block;
     margin-top: 1rem;
     padding:.8rem 3rem;
-    background:#222;
+    background:var(--main-color);
     color:#fff;
     font-size: 1.7rem;
     cursor: pointer;
-    border-radius: .2rem;
-    &:hover{
-        background:var(--cyan);
-        letter-spacing: .2rem;
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 0%;
+        background: var(--black);
+        z-index: -1;
+        transition: .2s ease-out;
     }
+    &:hover::before {
+        left: 0;
+        width: 100%;
+    }
+}
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: #fff;
+    box-shadow: var(--box-shadow);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 9%;
+    .logo{
+        font-size: 2.5rem;
+        color: var(--black);
+        font-weight: bolder;
+        span {
+            color: var(--main-color);
+        }
+    }
+    .menu {
+        a {
+            font-size: 1.7rem;
+            color: var(--light-color);
+            margin-left: 2rem;
+            &:hover {
+                color: var(--main-color);
+            }
+        }
+    }
+    .btn-menu {
+        cursor: pointer;
+        font-size: 2.5rem;
+        padding: 1rem 1.3rem;
+        border-radius: .5rem;
+        color: var(--main-color);
+        background: var(--bg);
+        display: none;
+    }
+}
+/* Sección inicio */
+.inicio {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding-top: 10rem;
+    background: var(--bg);
+    position: relative;
+    .content {
+        flex: 1 1 45rem;
+        h3 {
+            font-size: 3.5rem;
+            color: var(--black);
+        }
+        p {
+            font-size: 1.7rem;
+            color: var(--light-color);
+            line-height: 1.8;
+            padding: 1rem 0;
+        }
+    }
+    .image {
+        flex: 1 1 45rem;
+        img {
+            width: 100%;
+        }
+    }
+}
+/* Sección sevicios */
+.servicios {
+    .box-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        .box {
+            flex: 1 1 30rem;
+            border-radius: .5rem;
+            background: #fff;
+            box-shadow: var(--box-shadow);
+            padding: 2rem;
+            text-align: center;
+            img {
+                height: 30rem;
+                width: 30rem;
+            }
+            h3 {
+                font-size: 3rem;
+            }
+            p {
+                font-size: 2rem;
+                padding: 2rem;
+            }
+        }
+    }
+}
+/* Seccion Sobre mi */
+.sobremi {
+    .row {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+        .image {
+            flex: 1 1 45rem;
+            padding: 2rem;
+            img {
+                width: 100%;
+            }
+        }
+        .content {
+            flex: 1 1 45rem;
+            .title {
+                font-size: 3rem;
+                color: var(--black);
+            }
+            p {
+                font-size: 1.5rem;
+                color: var(--light-color);
+                line-height: 1.8;
+                padding: 1rem 0;
+            }
+        }
+    }
+}
+/* Sección galeria */
+.galeria {
+    .box-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+        gap: 1.5rem;
+        .box {
+            height: 30rem;
+            border-radius: .5rem;
+            overflow: hidden;
+            position: relative;
+            box-shadow: var(--box-shadow);
+            img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+/* Sección reseñas */
+.reseñas .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+    .box {
+        padding: 2rem;
+        border-radius: .5rem;
+        border: var(--border);
+        box-shadow: var(--box-shadow);
+        p {
+            padding-top: 1rem;
+            font-size: 1.6rem;
+            line-height: 1.8;
+            color: var(--light-color);
+            font-style: italic;
+        }
+        .user {
+            display: flex;
+            align-items: center;
+            padding-bottom: 1rem;
+            img {
+                height: 6rem;
+                width: 6rem;
+                border-radius: 50%;
+                margin-right: 1rem;
+            }
+            h3 {
+                font-size: 2.2rem;
+                color: var(--black);
+                padding-bottom: .5rem;
+            }
+            ion-icon {
+                font-size: 1.5rem;
+                color: var(--main-color);
+            }
+        }
+    }
+}
+/* Sección contacto */
+.contacto {
+    .box-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+        gap: 1.5rem;
+        .contacts {
+            padding: 2.5rem;
+            text-align: center;
+            border: var(--border);
+            border-radius: .5rem;
+            box-shadow: var(--box-shadow);
+            ion-icon {
+                height: 7rem;
+                width: 7rem;
+                line-height: 6rem;
+                padding: .5rem;
+                font-size: 2rem;
+                color: var(--main-color);
+                background: var(--bg);
+                border-radius: 50%;
+            }
+            h3 {
+                color: var(--black);
+                padding: 1rem 0;
+                font-size: 2.5rem;
+            }
+            p {
+                color: var(--light-color);
+                line-height: 1.8;
+                font-size: 1.5rem;
+            }
+        }
+    }
+}
+
+/* Media queries */
+@media (max-width:991px) {
+    html {
+        font-size: 55%;
+    }
+    header {
+        padding: 2rem;
+    }
+    section {
+        padding: 2rem;
+    }
+}
+@media (max-width:768px) {
+    .btn-menu {
+        display: initial;
+    }
+    header {
+        .menu {
+            position: absolute;
+            top:115%; right: 2rem;
+            background:#fff;
+            box-shadow: var(--box-shadow);
+            border:var(--border);
+            border-radius: .5rem;
+            width: 30rem;
+            transform: scale(0);
+            transform-origin: top right;
+            opacity: 0;
+            a {
+                font-size: 2rem;
+                display: block;
+                padding:1rem;
+                margin: 1rem;
+                border-radius: .5rem; 
+                &:hover {
+                    background: var(--bg);
+                }
+            } 
+        }
+        .active {
+            transform: scale(1);
+            opacity: 1;
+        }
+    }
+    .inicio {
+        .content {
+            text-align: center;
+        }
+    }
+}
+@media (max-width:450px){
+
+    html{
+        font-size: 50%;
+    }
+
 }
